--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,5 +5,29 @@
     list-style-type: none;
 }
 body{
-    background-color: aquamarine;
+    background-color: aqua;
 }
+.topnav{
+    float:right;
+}
+
+.column {
+    float: left;
+    width: 50%;
+    padding: 15px;
+  }
+  
+  /* Clear floats after the columns */
+  .row::after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+
+
+/*Footer*/
+.footer {
+    background-color: #F1F1F1;
+    text-align: center;
+    padding: 10px;
+  }
