--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,14 +8,52 @@ body{
     background-color: aqua;
 }
 .topnav{
-    float:right;
+  background-color: aliceblue;
+}
+.topnav::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+/*Topnaav*/
+.topnav ul{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
 }
 
-.column {
-    float: left;
-    width: 50%;
-    padding: 15px;
-  }
+li {
+  float: right;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover:not(.active) {
+  background-color: #111;
+}
+
+
+.leftcolumn {   
+  float: left;
+  width: 50%;
+  background-color: rgb(182, 211, 115);
+}
+
+/* Right column */
+.rightcolumn {
+  float: left;
+  width: 50%;
+  background-color: #f1f1f1;
+  padding-left: 20px;
+}
   
   /* Clear floats after the columns */
   .row::after {
